--- a/devcontainer.json
+++ b/devcontainer.json
@@ -13,12 +13,13 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"ms-python.python",
-				"njpwerner.autodocstring",
-				"ms-python.vscode-pylance",
 				"charliermarsh.ruff",
-				"tamasfe.even-better-toml",
-				"mhutchie.git-graph"
+				"mhutchie.git-graph",
+				"ms-azuretools.vscode-docker",
+				"ms-python.python",
+				"ms-python.vscode-pylance",
+				"njpwerner.autodocstring",
+				"tamasfe.even-better-toml"
 			],
 			"settings": {
 				"python.defaultInterpreterPath": "/home/vscode/.pyenv/shims/python",
